// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Component) Circle render mount 1`] = `
<Circle
  cx={0.5}
  cy={1}
  end={[Function]}
  height={10}
  onChange={[Function]}
  width={20}
>
  <circle
    cx={0.5}
    cy={1}
    fill="rgba(0, 0, 0, 0)"
    r="4"
    style={
      Object {
        "cursor": "se-resize",
      }
    }
  />
</Circle>
`;

exports[`(Component) Circle render normally 1`] = `
<circle
  cx={0.5}
  cy={1}
  fill="rgba(0, 0, 0, 0)"
  r="4"
  style={
    Object {
      "cursor": "se-resize",
    }
  }
/>
`;
